Track desktop capture in MediaStreamCaptureIndicator.

Today, MediaStreamCaptureIndicator keeps track of which WebContents
are capturing a video or audio device or another tab, but not of which
WebContents are capturing the desktop. This is problematic because
TabLifecycleUnit uses MediaStreamCaptureIndicator to decide which tabs
can be frozen/discarded.

With this CL:
- MediaStreamCaptureIndicator is notified of all stream captures,
  including desktop captures. An object can be provided to display
  custom UI when a stream is registered.
- MediaStreamCaptureIndicator exposes IsCapturingDesktop(), which
  can be used to determine whether a WebContents is capturing the
  desktop.

Future work:
- content::MediaStreamUI should be renamed
  content::MediaStreamDelegate, because it is an interface that
  allows an embedder to be notified when stream capture
  starts/stops, not just to display UI.
- MediaStreamCaptureIndicator should be renamed
  MediaStreamCaptureTracker, because it is not only used to display
  an indicator, it is a map from WebContents -> stream types.

TBR=elijahtaylor@chromium.org

Bug: 857495
Change-Id: I5ac2c670b599ef9a5aa8968c5e0e385cacce9412
Reviewed-on: https://chromium-review.googlesource.com/1118613
Commit-Queue: François Doray <fdoray@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Sergey Ulanov <sergeyu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572982}
Former-commit-id: 65406f8f364de8d8c332db0a7e6b14cc6da8b902